--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,3 +27,12 @@ set -g status-bg blue
 set -g status-left ''
 set -g status-right-length 60
 set -g status-right '♪♪ #(exec amixer get Master | egrep -o "[0-9]+%" | egrep -o "[0-9]*") | ♥#(acpi | cut -d ',' -f 2) | %a %m-%d %H:%M '
+
+
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+#set -g mouse on
+set-option -g mouse on
+#set-option -s set-clipboard off
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -i"
+
